--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,72 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 50px;
+  background-color: rgba(31, 139, 211, 0.89);
+  font-family: sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.li {
+  background-color: rgb(95, 187, 240);
+  padding: 15px;
+  margin-bottom: 15px;
+  border-radius: 30px;
+  border: 2px solid rgb(0, 255, 242);
+  font-size: 19px;
+}
+
+
+.delete {
+  padding: 1px;
+  font-size: 12px;
+  margin: 1px;
+  background-color: rgb(17, 0, 255);
+  color: rgb(0, 255, 242);
+  border: 1px solid rgb(17, 0, 255);
+  width: 5%;
+  border-radius: 100%;
+  margin: 1%;
+}
+
+.add {
+  padding: 10px;
+  font-size: 19px;
+  background-color: rgb(17, 0, 255);
+  color: azure;
+  border: 2px solid rgb(0, 255, 242);
+  width: 100%;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  text-align: center;
+}
+.task {
+  font-size: 19px;
+  width: 99%;
+  border: 2px solid rgb(0, 255, 242);
+  color: blue;
+  text-align: center;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+li {
+  display: list-item;
+  color: rgb(227, 237, 240);
+  font-size: 20px;
+  text-align: center;
+  list-style: none;
+  width: 100%;
+}
+
+.app-title {
+  text-align: center;
+  color: lightblue;
+  font-size: 70px;
+}
+
+.container {
+  border: 5px solid rgb(156, 243, 229);
+  border-radius: 25px;
+}
+
+input::placeholder {
+  color: rgb(156, 243, 229);
 }
